# open-bcif

./: 404.html  Cargo.toml  README.md  architecture.html  cli.html  introduction.html  print.html  quickstart.html  searchindex.js  searchindex.json  specification.html
.github/workflows/: docs.yml  publish.yml  release.yml  rust.yml
benches/: decoding_benchmarks.rs  streaming_benchmarks.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  cli.md  introduction.md  quickstart.md  specification.md
src/: cli.rs  lib.rs  main.rs  test_utils.rs
src/commands/: convert.rs  merge.rs  mod.rs  split.rs  validate.rs
src/encoding/: decoders.rs  mod.rs
src/streaming/: mod.rs  parser.rs
tests/: cli_tests.rs  compliance_tests.rs  encoding_tests.rs  proptests.rs
tests/data/: 1ubq.bcif
