[package]
name = "open-bcif"
version = "0.1.0"
edition = "2021"
authors = ["George Elkins"]
description = "A high-performance streaming toolkit for BinaryCIF (BCIF) files."
repository = "https://github.com/elkins/open-bcif"
license = "MIT"
keywords = ["structural-biology", "cif", "binarycif", "streaming", "parser"]
categories = ["science", "data-structures"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rmp = "0.8"
rmp-serde = "1.1"
rmpv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"

[[bench]]
name = "decoding_benchmarks"
harness = false

[[bench]]
name = "streaming_benchmarks"
harness = false

